--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="card">
         <img src="cards/10@n.png" alt="colourless 10">
         <div class="card-right">
-          <h2><span>2x col</span> Numbers</h2>
+          <h2><span>2x col</span> Numbers 0-10</h2>
           <p>0 and 10 only have one copy per colour.</p>
           <p>There are also colourless numbers (depicted). <br> These can only be matched by their number, and not by colour.</p>
         </div>
@@ -214,7 +214,7 @@
       <div class="card">
         <img src="cards/half orange@p.png" alt="purple / orange">
         <div class="card-right">
-          <h2><span>1x 2cols</span> Split Colour</h2>
+          <h2><span>1x 2cols</span> Double Colour</h2>
           <p>Has no number, but two colours instead.</p>
         </div>
       </div>
@@ -223,6 +223,216 @@
         <div class="card-right">
           <h2><span>1x col</span> Draw D6</h2>
           <p><i>Stackable</i>. Roll a D6. The next player draws that many cards.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/50 50@w.png" alt="wild 50/50">
+        <div class="card-right">
+          <h2><span>2x</span> Wild 50/50</h2>
+          <p><i>Stackable</i>. <i>Wild</i>. When played, call a coin flip. If correct, the next player draws 10 cards. If stacked and failed, you draw the entire stack.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/trolley problem@w.png" alt="wild trolley problem">
+        <div class="card-right">
+          <h2><span>2x</span> Trolley Problem</h2>
+          <p><i>Wild</i>. When played, flip 7 cards over and divide them into two piles (empty piles are allowed). The next player chooses one pile to draw.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/recycling@w.png" alt="wild recycling">
+        <div class="card-right">
+          <h2><span>2x</span> Recycling</h2>
+          <p><i>Wild</i>. When played, discard your hand, then draw that many cards.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/wild reverse@w.png" alt="wild reverse">
+        <div class="card-right">
+          <h2><span>4x</span> Wild Reverse</h2>
+          <p><i>Wild</i>. Reverses the direction of play when played.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/wild skip@w.png" alt="wild skip">
+        <div class="card-right">
+          <h2><span>4x</span> Wild Skip</h2>
+          <p><i>Wild</i>. The next player's turn is skipped.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/lootbox@w.png" alt="wild lootbox">
+        <div class="card-right">
+          <h2><span>4x</span> Lootbox</h2>
+          <p><i>Wild</i>. When played, flip six cards and draw three of them.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/discard all X@p.png" alt="purple discard all X">
+        <div class="card-right">
+          <h2><span>1x col</span> Discard All X</h2>
+          <p>When played, discard all cards in hand that have the same colour.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/parry@w.png" alt="wild parry">
+        <div class="card-right">
+          <h2><span>2x</span> Parry</h2>
+          <p><i>Stackable</i>. <i>Wild</i>. When stacked, the last player who added to the stack draws the cards instead.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/dynamite@w.png" alt="dynamite">
+        <div class="card-right">
+          <h2><span>2x</span> Dynamite</h2>
+          <p>Can be played at any time. This is placed in front of you. At the start of your turn, discard the top card of the deck. If it is red, then you draw six and destroy this, else pass this to the player to your left.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/draw five@p.png" alt="purple draw five">
+        <div class="card-right">
+          <h2><span>1x col</span> Draw Five</h2>
+          <p><i>Stackable</i>. The next player draws five cards.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/insult to injury@j.png" alt="insult to injury">
+        <div class="card-right">
+          <h2><span>1x</span> Insult to Injury</h2>
+          <p><b>MOD</b>. Whenever you make a player draw cards, they draw one more.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/loud yelling@j.png" alt="loud yelling">
+        <div class="card-right">
+          <h2><span>1x</span> Loud Yelling</h2>
+          <p><b>MOD</b>. You may pass your turn instead of playing.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/comically large spoon@j.png" alt="comically large spoon">
+        <div class="card-right">
+          <h2><span>1x</span> Comically Large Spoon</h2>
+          <p><b>MOD</b>. You may draw four cards then discard two instead of playing.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/fishing rod@j.png" alt="fishing rod">
+        <div class="card-right">
+          <h2><span>1x</span> Fishing Rod</h2>
+          <p><b>MOD</b>. You may draw the top card of a play pile instead of playing.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/red card@j.png" alt="red card (the mod, not just any red card)">
+        <div class="card-right">
+          <h2><span>1x</span> Red Card</h2>
+          <p><b>MOD</b>. Your red cards also skip the next player.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/magnifying glass@j.png" alt="magnifying glass">
+        <div class="card-right">
+          <h2><span>1x</span> Magnifying Glass</h2>
+          <p><b>MOD</b>. Before your turn, you may look at the top card of the deck.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/shielding potion@j.png" alt="shielding potion">
+        <div class="card-right">
+          <h2><span>1x</span> Shielding Potion</h2>
+          <p><b>MOD</b>. When you draw two or more cards, you may choose to draw one less card.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/glass shard@j.png" alt="glass shard">
+        <div class="card-right">
+          <h2><span>1x</span> Glass Shard</h2>
+          <p><b>MOD</b>. When you draw cards or make another player draw cards, the amount is doubled.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/gambling addiction@j.png" alt="gambling addiction">
+        <div class="card-right">
+          <h2><span>1x</span> Gambling Addiction</h2>
+          <p><b>MOD</b>. Before your turn, you may call a coin flip. If correct, take two turns where this does not trigger, else, skip your turn.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/sticker sheet@j.png" alt="sticker sheet">
+        <div class="card-right">
+          <h2><span>1x</span> Sticker Sheet</h2>
+          <p><b>MOD</b>. You may destroy this card to repeat the effects of a card you play.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/push your temper@j.png" alt="push your temper">
+        <div class="card-right">
+          <h2><span>1x</span> Push Your Temper</h2>
+          <p><b>MOD</b>. You may discard a card whenever your turn is skipped.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/energy drink@j.png" alt="energy drink">
+        <div class="card-right">
+          <h2><span>1x</span> Energy Drink</h2>
+          <p><b>MOD</b>. You may destroy this. When you do, take extra turns until you cannot play a card. You are not allowed to play wild cards during these extra turns.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/mass surveillance@j.png" alt="mass surveillance">
+        <div class="card-right">
+          <h2><span>1x</span> Mass Surveillance</h2>
+          <p><b>MOD</b>. You may draw a card and look at someone else's hand instead of playing.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/command grab@j.png" alt="command grab">
+        <div class="card-right">
+          <h2><span>1x</span> Command Grab</h2>
+          <p><b>MOD</b>. You may destroy this to use it as a Wild Draw Four card.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/memory loss@j.png" alt="memory loss">
+        <div class="card-right">
+          <h2><span>1x</span> Memory Loss</h2>
+          <p><b>MOD</b>. Before your turn, you may discard the top card of a play pile.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/tungsten cube@j.png" alt="tungsten cube">
+        <div class="card-right">
+          <h2><span>1x</span> Tungsten Cube</h2>
+          <p><b>MOD</b>. You may use odd numbered cards as Wild cards, but you must draw two when you cannot play.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/fudge@j.png" alt="Fudge">
+        <div class="card-right">
+          <h2><span>1x</span> Fudge</h2>
+          <p><b>MOD</b>. You may use odd numbered cards as Wild cards, but you must draw two when you cannot play.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/portal gun@j.png" alt="Portal Gun">
+        <div class="card-right">
+          <h2><span>1x</span> Portal Gun</h2>
+          <p><b>MOD</b>. You treat blue and orange as the same colour, and purple and magenta as the same colour.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/steady body@j.png" alt="steady body">
+        <div class="card-right">
+          <h2><span>1x</span> Steady Body</h2>
+          <p><b>MOD</b>. Your turn cannot be skipped.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="cards/marksman@j.png" alt="marksman">
+        <div class="card-right">
+          <h2><span>1x</span> Marksman</h2>
+          <p><b>MOD</b>. When you play a basic "Draw N" or "Wild Draw N", you may draw a card to make it targeted. The card becomes unstackable.</p>
         </div>
       </div>
     </div>
