you cannot play this

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <main>
     <p>
       This is a game based on the card game UNO. If you are not familiar with the rules of UNO, this is not the place for you.
+      <br><br>
+      Currently a work in progress.
     </p>
     <div class="img-bottom-border">
       <img src="rules.png" alt="rules">
@@ -436,6 +438,13 @@
         </div>
       </div>
     </div>
+    <br>
+    <div class="img-bottom-border">
+      <img src="where.png" alt="where can I play this?">
+    </div>
+    <p>
+      As of right now, nowhere! A downloadable print-and-play version will come when it is finished. A Tabletop Simulator version should also be expected.
+    </p>
   </main>
   <footer>
     game made by not mario. <br>
