--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
         </div>
       </div>
       <div class="card">
-        <img src="cards/steady body@j.png" alt="steady body">
+        <img src="cards/immovable object@j.png" alt="immovable object">
         <div class="card-right">
-          <h2><span>1x</span> Steady Body</h2>
+          <h2><span>1x</span> Immovable Object</h2>
           <p><b>MOD</b>. Your turn cannot be skipped.</p>
         </div>
       </div>
