--- a/index.html
+++ b/index.html
@@ -443,7 +443,8 @@
       <img src="where.png" alt="where can I play this?">
     </div>
     <p>
-      As of right now, nowhere! A downloadable print-and-play version will come when it is finished. A Tabletop Simulator version should also be expected.
+      A <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3279465439">port to Tabletop Simulator</a> has been made! <br/>
+      A printable pdf will come when it is verified to be good.
     </p>
   </main>
   <footer>
