--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       Below is a list of all unique card types in the game, ignoring colour. <br>
       All <i>wild</i> cards can be played at any time on any pile. When played, choose a valid colour. The card's colour becomes the chosen colour. <br>
       When a card tells a player to draw cards (i.e. "the next player draws two cards"), their next turn is skipped if they are the next player, unless otherwise specified. <br>
-      Additionally, all <i>stackable</i> cards may be played on top of all other <i>stackable</i>. A card is <i>stackable</i> if it features an arrow in the top right / bottom left corner. Cards are only drawn by the first player to not continue the stack.
+      Additionally, all <i>stackable</i> cards may be played on top of all other <i>stackable</i> cards that match by either symbol or colour. A card is <i>stackable</i> if it features an arrow in the top right / bottom left corner. Cards are only drawn by the first player to not continue the stack.
     </p>
     <div class="cards">
       <div class="card">
