--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <img src="cards/fudge@j.png" alt="Fudge">
         <div class="card-right">
           <h2><span>1x</span> Fudge</h2>
-          <p><b>MOD</b>. You may use odd numbered cards as Wild cards, but you must draw two when you cannot play.</p>
+          <p><b>MOD</b>. You may use numbered cards as numbers 1 higher or lower.</p>
         </div>
       </div>
       <div class="card">
